change some shortcut for mplayer

--- a/.mplayer/input.conf
+++ b/.mplayer/input.conf
@@ -9,11 +9,13 @@
 ##
 
 RIGHT seek +10
+l  seek +10
 LEFT seek -10
+h    seek -10
 DOWN seek -60
-h    seek -60
+H    seek -60
 UP seek +60
-l  seek +60
+L  seek +60
 PGUP seek 600
 PGDWN seek -600
 + audio_delay 0.100
@@ -68,6 +70,8 @@ I osd_show_property_text "${filename}"
 ### I use h,l as seek shortcuts
 #h tv_step_channel 1
 #l tv_step_channel -1
+J tv_step_channel 1
+K tv_step_channel -1
 n tv_step_norm
 b tv_step_chanlist
 
