update configs; add some script for irssi+bitlbee

--- a/.irssi/config
+++ b/.irssi/config
@@ -8,7 +8,7 @@ servers = (
     autoconnect = "yes";
   },
   {
-    address = "im.bitlbee.org";
+    address = "localhost";
     chatnet = "BitlBeeIRCnet";
     port = "6667";
     use_ssl = "no";
