--- a/.screenrc
+++ b/.screenrc
@@ -20,7 +20,7 @@
 # SCREEN SETTINGS
 # ------------------------------------------------------------------------------
 
-#startup_message off
+startup_message off
 #nethack on
 
 #defflow on # will force screen to process ^S/^Q
@@ -48,6 +48,17 @@ bind K kill
 bind I login on
 bind O login off
 bind } history
+
+bind j focus down
+bind k focus up
+bind t focus top
+bind b focus bottom
+
+# close current region
+bind q remove
+
+bind = resize +3
+bind - resize -3
 
 # An example of a "screen scraper" which will launch urlview on the current
 # screen window
@@ -88,25 +99,19 @@ termcapinfo xterm 'is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;4;6l'
 #
 termcapinfo xterm|xterms|xs|rxvt ti@:te@
 
+ignorecase on
 # ------------------------------------------------------------------------------
 # STARTUP SCREENS
 # ------------------------------------------------------------------------------
 
 # Example of automatically running some programs in windows on screen startup.
 #
-#   The following will open top in the first window, an ssh session to monkey
-#   in the next window, and then open mutt and tail in windows 8 and 9
-#   respectively.
-#
 screen -t music 0 
-screen -t mail 1 mutt
+screen -t mail 1 if [ $(uanme) != 'Darwin' ]; then mutt; fi
 screen -t work 2 
 screen -t work2 3
 screen -t misc 4
 screen -t ipython 5 ipython 
 screen -t w3m 6 w3m www.google.com
-screen -t irssi 7 irssi
-# screen 0 top 
-# screen -t monkey ssh monkey
-# screen -t daemon 9 tail -f /var/log/daemon.log
+screen -t irssi 7 if [ $(uname) = 'Darwin' ]; then irssi; fi
 
