change folder for netgrowl.py.SVN; update checkmail.py to use netgrowl for notification

--- a/.irssi/config
+++ b/.irssi/config
@@ -309,7 +309,7 @@ hilights = (
     word = "yes";
   },
   {
-    text = "vincent[^ ]*";
+    text = "vincent[^ @]?";
     color = "%R%4";
     act_color = "%R";
     nick = "no";
