update config files

--- a/.procmailrc
+++ b/.procmailrc
@@ -443,7 +443,7 @@ maillists/vim-dev@vim.org
 
 :0:
 * ^TOvim-announce@vim.org
-maillists/vim-annouce@vim.org
+maillists/vim-announce@vim.org
 
 :0:
 * ^TOipython-user@scipy.net
