--- a/.exowebrc
+++ b/.exowebrc
@@ -43,4 +43,12 @@ alias livebet_start="cd /home/vincent/work/livebet/src && ./nordicbetsite stop a
 			;;
 	 esac
  }
+
+ function gen_nb_tags()
+ {
+     OLDDIR=$PWD
+     cd ${1:-$PWD}
+     find . -type d \( -name lib -o -iname mgs_poker -o -iname scripts -o -iname selenium -o -iname zope -o -iname stress \) -prune -o -type f -iname "*.py" -print | ctags -a -L - 
+     cd $OLDDIR
+ }
 # }}}
