--- a/.screenrc
+++ b/.screenrc
@@ -113,6 +113,9 @@ screen -t work2 3
 screen -t misc 4
 screen -t ipython 5 ipython 
 screen -t w3m 6 w3m www.google.com
-screen -t irssi 7 /bin/bash -c 'if [ $(uname) = "Darwin" ]; then irssi; fi'
+### the following config worked during the renovation of exoweb's office 
+#screen -t irssi 7 /bin/bash -c 'if [ $(uname) = "Darwin" ]; then irssi; fi'
+screen -t irssi 7 irssi
+screen -t psql psql NBET_vincent
 utf8 on # use utf-8 encoding in irssi window 
 
