--- a/.bitlbee/bitlbee.conf
+++ b/.bitlbee/bitlbee.conf
@@ -58,14 +58,14 @@ DaemonPort = 16667
 ## Specify an alternative MOTD (Message Of The Day) file. Default value depends
 ## on the --etcdir argument to configure.
 ##
-MotdFile = /Users/linsong/.bitlbee/motd.txt
+MotdFile = /home/vincent/.bitlbee/motd.txt
 
 ## ConfigDir
 ##
 ## Specify an alternative directory to store all the per-user configuration
 ## files. (.nicks/.accounts)
 ##
-ConfigDir = /Users/linsong/.bitlbee/data
+ConfigDir = /home/vincent/.bitlbee/data
 
 ## Ping settings
 ##
