--- a/.exowebrc
+++ b/.exowebrc
@@ -75,8 +75,11 @@ alias livebet_start="cd /home/vincent/work/livebet/src && ./nordicbetsite stop a
      cd $OLDDIR 
  }
 
- if [ ! -e ~/.fetchmail.pid ]; then 
-    fetchmail
+FETCHMAIL_CMD=$(which fetchmail)
+ if [ -n "$FETCHMAIL_CMD" ]; then
+     if [ ! -e ~/.fetchmail.pid ]; then 
+        $FETCHMAIL_CMD
+     fi
  fi
 
  if [ $(pgrep -c checkmail.py) = 0 ]; then 
