update .bashrc and .vim_simple_rc to source more useful plugins

--- a/.vim_simple_rc
+++ b/.vim_simple_rc
@@ -121,3 +121,4 @@ runtime plugin/mark.vim
 runtime plugin/visualmark.vim
 runtime plugin/AsNeeded.vim
 runtime plugin/ANcmds.vim
+runtime plugin/foldutil.vim
