--- a/.irssi/config
+++ b/.irssi/config
@@ -288,6 +288,13 @@ statusbar = {
         barend = { priority = "100"; alignment = "right"; };
       };
     };
+    awl_1 = {
+      items = {
+        barstart = { priority = "100"; };
+        awl_1 = { };
+        barend = { priority = "100"; alignment = "right"; };
+      };
+    };
   };
 };
 settings = {
@@ -322,6 +329,9 @@ settings = {
     openurl_watch_mail = "no";
     trackbar_string = "-";
     trackbar_style = "%r";
+    wordcompletion_dsn = "DBI:Pg:dbname=vincent";
+    wordcompletion_pass = " ";
+    wordcompletion_user = "vincent";
   };
 };
 keyboard = (
