--- a/.screenrc
+++ b/.screenrc
@@ -123,8 +123,8 @@ screen -t ipython 5 ipython
 screen -t w3m 6 w3m www.google.com
 ### the following config worked during the renovation of exoweb's office 
 #screen -t irssi 7 /bin/bash -c 'if [ $(uname) = "Darwin" ]; then irssi; fi'
-#screen -t irssi 7 irssi
+screen -t irssi 7 irssi
 screen -t psql psql NBET_vincent
-select work
+select mail
 
 utf8 on # use utf-8 encoding in irssi window 
