fix a minor issue

--- a/screenrc.local.example
+++ b/screenrc.local.example
@@ -5,7 +5,7 @@ screen -t w3m 6 w3m www.google.com
 ### the following config worked during the renovation of exoweb's office 
 #screen -t irssi 7 /bin/bash -c 'if [ $(uname) = "Darwin" ]; then irssi; fi'
 screen -t irssi 7 irssi
-screen -t psql psql NBET_vincent
+screen -t psql 8 psql NBET_vincent
 
 select mail
 
