--- a/.screenrc
+++ b/.screenrc
@@ -86,7 +86,7 @@ termcapinfo xterm*|rxvt*|kterm*|Eterm* hs:ts=\E]0;:fs=\007:ds=\E]0;\007
 # enabled if there is no hardstatus setting for your terminal)
 #
 #hardstatus lastline "%-Lw%{= BW}%50>%n%f* %t%{-}%+Lw%<"
-hardstatus alwayslastline "%-Lw%{= BW}%50>%n%f* %t%{-}%+Lw%< %=%Y/%m/%d %c:%s"
+hardstatus alwayslastline "%-Lw%{= BW}%50>%n%f* %t%{-}%+Lw%< %=%{m}|%l|%{-} %{r}%Y/%m/%d %c:%s%{-}"
 
 # show caption only when there is more than one window
 caption splitonly
