--- a/.screenrc
+++ b/.screenrc
@@ -34,6 +34,9 @@ vbell_msg "   Wuff  ----  Wuff!!  "
 # define a bigger scrollback, default is 100 lines
 defscrollback 1024
 
+#run everything in unicode, to allow display of international characters w/o problems
+defutf8 on 
+
 # ------------------------------------------------------------------------------
 # SCREEN KEYBINDINGS
 # ------------------------------------------------------------------------------
@@ -108,6 +111,12 @@ termcapinfo xterm 'is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;4;6l'
 termcapinfo xterm|xterms|xs|rxvt ti@:te@
 
 ignorecase on
+
+#
+# Run a screensaver if there's nothing happening for a while.
+#
+idle 420 eval "screen cmatrix -f -o -u 10" "idle 0"
+
 # ------------------------------------------------------------------------------
 # STARTUP SCREENS
 # ------------------------------------------------------------------------------
@@ -121,5 +130,3 @@ screen -t misc 4
 
 # source local settings 
 source screenrc.local
-
-utf8 on # use utf-8 encoding in irssi window 
