--- a/.screenrc
+++ b/.screenrc
@@ -117,6 +117,11 @@ ignorecase on
 #
 idle 420 eval "screen cmatrix -f -o -u 10" "idle 0"
 
+# use blankerprg will make cursor missing, don't know the reason yet
+#blankerprg cmatrix -f -o -u 10
+#idle 420 blanker
+
+
 # ------------------------------------------------------------------------------
 # STARTUP SCREENS
 # ------------------------------------------------------------------------------
